tests/paczka2/big_fuzzy/18381671.err
Error in line 3: X4KSNkluUq A849 33,2
Error in line 5: ZlHRO9 S325 94,3
Error in line 14: X4KSNkluUq S697 28,2
Error in line 12: S697 S697 12,4
Error in line 21: S697 A142 78,0
Error in line 31: 5jF1hOssIm A849 76,3
Error in line 20: X4KSNkluUq A849 1,3
Error in line 49: ZlHRO9 A849 70,4
Error in line 50: ZlHRO9 S697 97,9
Error in line 51: ZlHRO9 A849 56,2
Error in line 63: X4KSNkluUq A849 178,42
Error in line 58: S697 S697 70,1
Error in line 65: S697 A142 62,3
Error in line 62: X4KSNkluUq A849 55,0
Error in line 68: pcnkOnH S325 30,5
Error in line 78: pcnkOnH S697 68,6
Error in line 87: pcnkOnH A849 66,2
Error in line 95: S697 S325 68,1
Error in line 75: ZlHRO9 S697 8,3
Error in line 96: 5jF1hOssIm A849 217,4
Error in line 125: pcnkOnH A142 37,8
Error in line 144: 5jF1hOssIm S697 206,3
Error in line 151: ZlHRO9 S325 75,8
Error in line 154: X4KSNkluUq A142 312,6
Error in line 157: X4KSNkluUq S325 32,9
Error in line 167: psHiDdI A142 72,2
Error in line 173: psHiDdI A849 21,7
Error in line 169: 5jF1hOssIm S325 65,8
Error in line 185: S697 S3>5 9,>
Error in line 190: X4KSNkluUq S325 66,25
Error in line 189: ZlHRO9 S697 7,4
Error in line 188: X4KSNkluUq S325 20,1
Error in line 207: pcnkOnH S697 7,42
Error in line 200: psHiDdI A142 83,6
Error in line 168: pcnkOnH A142 112,9
Error in line 218: mHa S325 25,3
Error in line 219: X4KSNkluUq A142 33,4
Error in line 223: X4KSNkluUq A849 33,3
Error in line 215: ZlHRO9 S697 47,5
Error in line 224: X4KSNkluUq A142 70,9
Error in line 206: S697 S325 16,1
Error in line 233: S697 A142 12,9
Error in line 238: mHa A849 0,4
Error in line 239: mHa S697 20,5
Error in line 243: mHa S325 1,7
Error in line 248: ZlHRO9 A849 12,6
